--- a/pencegahan.html
+++ b/pencegahan.html
@@ -135,7 +135,7 @@
         <div class="container">
           <span>&copy; <script>
               document.write(new Date().getFullYear());
-            </script> <b>Caliph71</b> from <b>Indonesia</b> with <i class="fas fa-heart"></i></span>
+            </script> <b>AkmalzEzty</b> from <b>Indonesia</b> with <i class="fas fa-heart"></i></span>
         </div>
       </footer>
       <script src="dist/jquery/dist/jquery.min.js"></script>
