--- a/index.html
+++ b/index.html
@@ -15,11 +15,8 @@
       <meta name="author" content="Akmalz">
       <meta name="robots" content="index, follow" />
     <script> 
-    alert('Welcome Gan')
-    alert('Perkenalkan Namaku Akmalz')
-    alert('14 thn:)')
-    alert('status? siswa smp')
-    alert('hobby? rebahan, game, bljr ngoding')
+    alert('Web Covid By Akmalz')
+    alert('Maaf masih kaku :)')
    </script>
    </head>
    <style>
