--- a/index.html
+++ b/index.html
@@ -2,24 +2,22 @@
 <html lang="en">
 
 <head>
-      <title>Home | Akmalz</title>
-      <link rel="stylesheet" type="text/css" href="css/style.css">
-      <link rel="stylesheet" type="text/css" href="css/font-awesome.css">
-      <link rel="stylesheet" type="text/css" href="css/animate.css">
-      <link rel="icon" href="https://i.ibb.co/c80cZ3Y/pp-biodata.jpg" type="image/jpg">
-      <meta charset="utf-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <meta name="description" content="" />
-      <meta name="keywords" content=" "/>
-      <meta name="author" content="Akmalz">
-      <meta name="robots" content="index, follow" />
-    <script> 
-    alert('Web Covid By Akmalz')
-    alert('Maaf masih kaku :)')
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cek COVID-19 Indonesia</title>
+  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+  <meta name="title" content="Cek Covid19 Indonesia">
+  <meta name="description" content="Website informasi sederhana tentang COVID-19 Indonesia dan data per-provinsi Indonesia.">
+  <link rel="stylesheet" href="dist/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="dist/@fortawesome/fontawesome-free/css/fontawesome.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="src/css/style.min.css">  
+  <script> 
+    alert('Website Covid Indo By Akmalz')
+    alert('Sori kaku, msih bljr :)')
    </script>
-   </head>
-   <style>
+</head>
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light static-top">
