--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cek COVID-19 Indonesia</title>
-  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-  <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="img/freepick_3592537.jpg" type="image/jpg">
+  <link rel="icon" href="img/freepick_3592537.jpg" type="image/jpg">
   <meta name="title" content="Cek Covid19 Indonesia">
   <meta name="description" content="Website informasi sederhana tentang COVID-19 Indonesia dan data per-provinsi Indonesia.">
   <link rel="stylesheet" href="dist/bootstrap/dist/css/bootstrap.min.css">
